// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderBulkButton should be null when the user does not have the sufficient permission 1`] = `<div />`;

exports[`renderBulkButton should be null when the user is not logged in 1`] = `<div />`;

exports[`renderBulkButton should show bulk change button when user has edit rights on specific quality profile 1`] = `
<BulkChange
  query={
    {
      "activation": undefined,
      "activationSeverities": [],
      "availableSince": undefined,
      "compareToProfile": undefined,
      "cwe": [],
      "inheritance": undefined,
      "languages": [],
      "owaspTop10": [],
      "owaspTop10-2021": [],
      "profile": undefined,
      "repositories": [],
      "ruleKey": undefined,
      "sansTop25": [],
      "searchQuery": undefined,
      "severities": [],
      "sonarsourceSecurity": [],
      "statuses": [],
      "tags": [],
      "template": undefined,
      "types": [],
    }
  }
  referencedProfiles={
    {
      "foo": {
        "actions": {
          "edit": true,
        },
        "activeDeprecatedRuleCount": 2,
        "activeRuleCount": 10,
        "childrenCount": 0,
        "depth": 1,
        "isBuiltIn": false,
        "isDefault": false,
        "isInherited": false,
        "key": "foo",
        "language": "js",
        "languageName": "JavaScript",
        "name": "name",
        "projectCount": 3,
      },
      "key": {
        "activeDeprecatedRuleCount": 2,
        "activeRuleCount": 10,
        "childrenCount": 0,
        "depth": 1,
        "isBuiltIn": false,
        "isDefault": false,
        "isInherited": false,
        "key": "key",
        "language": "js",
        "languageName": "JavaScript",
        "name": "name",
        "projectCount": 3,
      },
    }
  }
  total={0}
/>
`;

exports[`renderBulkButton should show bulk change button when user has global admin rights on quality profiles 1`] = `
<BulkChange
  query={
    {
      "activation": undefined,
      "activationSeverities": [],
      "availableSince": undefined,
      "compareToProfile": undefined,
      "cwe": [],
      "inheritance": undefined,
      "languages": [],
      "owaspTop10": [],
      "owaspTop10-2021": [],
      "profile": undefined,
      "repositories": [],
      "ruleKey": undefined,
      "sansTop25": [],
      "searchQuery": undefined,
      "severities": [],
      "sonarsourceSecurity": [],
      "statuses": [],
      "tags": [],
      "template": undefined,
      "types": [],
    }
  }
  referencedProfiles={{}}
  total={0}
/>
`;

exports[`should render correctly: loaded (ScreenPositionHelper) 1`] = `
<div
  className="layout-page-side"
  style={
    {
      "top": 0,
    }
  }
>
  <div
    className="layout-page-side-inner"
  >
    <div
      className="layout-page-filters"
    >
      <A11ySkipTarget
        anchor="rules_filters"
        label="coding_rules.skip_to_filters"
        weight={10}
      />
      <FiltersHeader
        displayReset={false}
        onReset={[Function]}
      />
      <SearchBox
        className="spacer-bottom"
        id="coding-rules-search"
        maxLength={200}
        minLength={2}
        onChange={[Function]}
        placeholder="search.search_for_rules"
        value=""
      />
      <FacetsList
        facets={{}}
        onFacetToggle={[Function]}
        onFilterChange={[Function]}
        openFacets={
          {
            "languages": true,
            "owaspTop10": false,
            "owaspTop10-2021": false,
            "sansTop25": false,
            "sonarsourceSecurity": false,
            "standards": false,
            "types": true,
          }
        }
        query={
          {
            "activation": undefined,
            "activationSeverities": [],
            "availableSince": undefined,
            "compareToProfile": undefined,
            "cwe": [],
            "inheritance": undefined,
            "languages": [],
            "owaspTop10": [],
            "owaspTop10-2021": [],
            "profile": undefined,
            "repositories": [],
            "ruleKey": undefined,
            "sansTop25": [],
            "searchQuery": undefined,
            "severities": [],
            "sonarsourceSecurity": [],
            "statuses": [],
            "tags": [],
            "template": undefined,
            "types": [],
          }
        }
        referencedProfiles={{}}
        referencedRepositories={{}}
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly: loaded 1`] = `
<Fragment>
  <Suggestions
    suggestions="coding_rules"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="coding_rules.page"
  >
    <meta
      content="noindex"
      name="robots"
    />
  </Helmet>
  <div
    className="layout-page"
    id="coding-rules-page"
  >
    <ScreenPositionHelper
      className="layout-page-side-outer"
    >
      <Component />
    </ScreenPositionHelper>
    <div
      className="layout-page-main"
    >
      <div
        className="layout-page-header-panel layout-page-main-header"
      >
        <div
          className="layout-page-header-panel-inner layout-page-main-header-inner"
        >
          <div
            className="layout-page-main-inner"
          >
            <A11ySkipTarget
              anchor="rules_main"
            />
            <div
              className="display-flex-space-between"
            >
              <BulkChange
                query={
                  {
                    "activation": undefined,
                    "activationSeverities": [],
                    "availableSince": undefined,
                    "compareToProfile": undefined,
                    "cwe": [],
                    "inheritance": undefined,
                    "languages": [],
                    "owaspTop10": [],
                    "owaspTop10-2021": [],
                    "profile": undefined,
                    "repositories": [],
                    "ruleKey": undefined,
                    "sansTop25": [],
                    "searchQuery": undefined,
                    "severities": [],
                    "sonarsourceSecurity": [],
                    "statuses": [],
                    "tags": [],
                    "template": undefined,
                    "types": [],
                  }
                }
                referencedProfiles={{}}
                total={0}
              />
              <PageActions
                paging={
                  {
                    "pageIndex": 0,
                    "pageSize": 100,
                    "total": 0,
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="layout-page-main-inner"
      >
        <ul>
          <RuleListItem
            isLoggedIn={true}
            key="javascript:S1067"
            onActivate={[Function]}
            onDeactivate={[Function]}
            onFilterChange={[Function]}
            onOpen={[Function]}
            rule={
              {
                "key": "javascript:S1067",
                "lang": "js",
                "langName": "JavaScript",
                "name": "Use foo",
                "severity": "MAJOR",
                "status": "READY",
                "sysTags": [
                  "a",
                  "b",
                ],
                "tags": [
                  "x",
                ],
                "type": "CODE_SMELL",
              }
            }
            selected={false}
          />
          <RuleListItem
            isLoggedIn={true}
            key="javascript:S1067"
            onActivate={[Function]}
            onDeactivate={[Function]}
            onFilterChange={[Function]}
            onOpen={[Function]}
            rule={
              {
                "key": "javascript:S1067",
                "lang": "js",
                "langName": "JavaScript",
                "name": "Use foo",
                "severity": "MAJOR",
                "status": "READY",
                "sysTags": [
                  "a",
                  "b",
                ],
                "tags": [
                  "x",
                ],
                "type": "CODE_SMELL",
              }
            }
            selected={false}
          />
        </ul>
        <ListFooter
          count={2}
          loadMore={[Function]}
          ready={true}
          total={0}
        />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: loading 1`] = `
<Fragment>
  <Suggestions
    suggestions="coding_rules"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="coding_rules.page"
  >
    <meta
      content="noindex"
      name="robots"
    />
  </Helmet>
  <div
    className="layout-page"
    id="coding-rules-page"
  >
    <ScreenPositionHelper
      className="layout-page-side-outer"
    >
      <Component />
    </ScreenPositionHelper>
    <div
      className="layout-page-main"
    >
      <div
        className="layout-page-header-panel layout-page-main-header"
      >
        <div
          className="layout-page-header-panel-inner layout-page-main-header-inner"
        >
          <div
            className="layout-page-main-inner"
          >
            <A11ySkipTarget
              anchor="rules_main"
            />
            <div
              className="display-flex-space-between"
            >
              <div />
              <PageActions />
            </div>
          </div>
        </div>
      </div>
      <div
        className="layout-page-main-inner"
      >
        <ul />
      </div>
    </div>
  </div>
</Fragment>
`;
